# archivist-cli

./: .archivist  .gitignore  AGENTS.md  README.md  ROADMAP.md  archivist-cli.code-workspace  install.sh  pyproject.toml
.archivist/: config.yaml
.github/: LICENSE  README.md
.github/assets/: ASCII.txt
.github/workflows/: ci.yaml  release.yaml
.obsidian/: appearance.json  workspace.json
ARCHIVE/: CHANGELOG-2026-03-09-dcfcaca.md  CHANGELOG-2026-03-09.md  CHANGELOG-2026-03-13-b1f8438.md  CHANGELOG-2026-03-13.md  CHANGELOG-2026-03-14-48f6da2.md  CHANGELOG-2026-03-14.md  CHANGELOG-2026-03-15-cce03dc.md  CHANGELOG-2026-03-15-fba982f.md  CHANGELOG-2026-03-15.md  CHANGELOG-2026-04-02.md  CHANGELOG_TEMPLATE.md
archivist/: cli.py  formatter.py  utils.py
archivist/commands/: __init__.py  init.py  manifest.py  migrate.py  reclassify.py
archivist/data/: sample-changelog.py
archivist/utils/: __init__.py  changelog.py  config.py  db.py  frontmatter.py  git.py  note_filter.py  output.py  registry.py  rename_helpers.py  templater.py
docs/: CENTRALIZED_DATABASE_IMPLEMENTATION.md  CENTRALIZED_DATABASE_SPEC.md  CENTRALIZED_DATABASE_TESTING_SPECIFICATION.md  LOGGING_AUGMENTATION_PLAN.md  PLUGIN_SYSTEM_FEATURE_CHECKLIST.md  ROADMAP.md  TEMPLATER_SUPPORT_PLAN.md  TESTING_SPECIFICATION.md
docs/ARCHIVE/: CHANGELOG-2026-03-09-a9340ce.md  CHANGELOG-2026-04-02-796132a.md  CHANGELOG-2026-04-04-541a454.md  CHANGELOG-2026-04-04.md  CHANGELOG-2026-04-18-89c08fe.md  CHANGELOG-2026-04-18-c1495eb.md  CHANGELOG-2026-04-18-d006c88.md  CHANGELOG-2026-04-18.md  CHANGELOG-2026-04-20-f2586de.md  CHANGELOG-2026-04-20.md  CHANGELOG-2026-04-27-28a843a.md  CHANGELOG-2026-04-27-92cd2bc.md  (+11 more)
tests/: conftest.py
(+26 files in other folders)
