[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "archivist"
version = "1.0.0"
description = "CLI tool for managing Obsidian vault frontmatter and archive workflows"
requires-python = ">=3.10"
dependencies = ["pyyaml"]

[project.scripts]
archivist = "archivist.cli:main"

[tool.setuptools.packages]
find = {}